Avoid portlet edit buttons getting hidden behind webcontent edit buttons

--- a/themes/deltares-theme/src/css/objects/portlet/_general.scss
+++ b/themes/deltares-theme/src/css/objects/portlet/_general.scss
@@ -2,6 +2,6 @@
   background-color: transparent;
 }
 
-.autofit-col, .tbar-item {
+.dropdown-action{
   position: absolute;
 }
